# api/project/v1/gen/http/openapi.yaml
@@ -249,9 +249,9 @@ paths:
                   description: JWT token issued by Heimdall
                   required: false
                   type: string
-                - name: ETag
+                - name: If-Match
                   in: header
-                  description: ETag header value
+                  description: If-Match header value for conditional requests
                   required: false
                   type: string
                 - name: Update-Project-BaseRequestBody
@@ -333,9 +333,9 @@ paths:
                   description: JWT token issued by Heimdall
                   required: false
                   type: string
-                - name: ETag
+                - name: If-Match
                   in: header
-                  description: ETag header value
+                  description: If-Match header value for conditional requests
                   required: false
                   type: string
             responses:
@@ -458,9 +458,9 @@ paths:
                   description: JWT token issued by Heimdall
                   required: false
                   type: string
-                - name: ETag
+                - name: If-Match
                   in: header
-                  description: ETag header value
+                  description: If-Match header value for conditional requests
                   required: false
                   type: string
                 - name: Update-Project-SettingsRequestBody
